# django-shared-core

./: .buildinfo  .gitignore  .sassrc  LICENSE  README.md  genindex.html  index.html  objects.inv  package.json  py-modindex.html  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: gh-pages.yml  (+1 more)
_modules/: index.html
dev/: .gitignore  README.md  manage.py  requirements-django3.in  requirements-django3.txt  requirements-django4.in  requirements-django4.txt  requirements.in  requirements.txt
docs/: conf.py  make.bat
helpers/: _fake_settings.py  _setup_env.py  compilemessages.py  makemessages.py  makemigrations.py
migrating/: index.html
reference/: cdh.core.admin.html  cdh.core.apps.html  cdh.core.collections.html  cdh.core.context_processors.html  cdh.core.fields.crypter.html  cdh.core.fields.encrypted_fields.html  cdh.core.fields.html  cdh.core.fields.html5.html  cdh.core.fields.mixin.html  cdh.core.file_loading.html  cdh.core.forms.html  cdh.core.hashers.html  cdh.core.html  cdh.core.js_urls.conf.html  cdh.core.js_urls.conf.settings.html  cdh.core.js_urls.html  cdh.core.js_urls.serializer.html  cdh.core.js_urls.utils.compat.html  cdh.core.js_urls.utils.html  cdh.core.js_urls.utils.text.html  cdh.core.js_urls.views.html  cdh.core.mail.classes.html  cdh.core.mail.html  cdh.core.mail.utils.html  cdh.core.mail.views.html  cdh.core.mail.widgets.html  cdh.core.management.commands.html  cdh.core.management.commands.makemessages.html  cdh.core.management.html  cdh.core.middleware.html  cdh.core.middleware.local_thread_middleware.html  cdh.core.models.html  cdh.core.settings.html  cdh.core.templatetags.cdh_filters.html  cdh.core.templatetags.datatables.html  cdh.core.templatetags.file_loading.html  cdh.core.templatetags.get_field_name.html  cdh.core.templatetags.html  cdh.core.templatetags.include_if_exists.html  cdh.core.templatetags.messages.html  (+94 more)
scss/: bootstrap.scss  icomoon.scss
(+1733 files in other folders)
